ciao/setslide11-Kaleidoscope1.0_AST/parser.output
Grammar

    0 $accept: startsymb "end of file"

    1 startsymb: program

    2 program: %empty
    3        | top ";" program

    4 top: %empty
    5    | definition
    6    | external
    7    | exp

    8 definition: "def" proto exp

    9 external: "extern" proto

   10 proto: "id" "(" idseq ")"

   11 idseq: %empty
   12      | "id" idseq

   13 exp: exp "+" exp
   14    | exp "-" exp
   15    | exp "*" exp
   16    | exp "/" exp
   17    | idexp
   18    | "(" exp ")"
   19    | "number"

   20 idexp: "id"
   21      | "id" "(" optexp ")"

   22 optexp: %empty
   23       | explist

   24 explist: exp
   25        | exp "," explist


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    ";" (258) 3
    "," (259) 25
    "-" (260) 14
    "+" (261) 13
    "*" (262) 15
    "/" (263) 16
    "(" (264) 10 18 21
    ")" (265) 10 18 21
    "extern" (266) 9
    "def" (267) 8
    "id" <std::string> (268) 10 12 20 21
    "number" <double> (269) 19


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    startsymb (16)
        on left: 1
        on right: 0
    program <RootAST*> (17)
        on left: 2 3
        on right: 1 3
    top <RootAST*> (18)
        on left: 4 5 6 7
        on right: 3
    definition <FunctionAST*> (19)
        on left: 8
        on right: 5
    external <PrototypeAST*> (20)
        on left: 9
        on right: 6
    proto <PrototypeAST*> (21)
        on left: 10
        on right: 8 9
    idseq <std::vector<std::string>> (22)
        on left: 11 12
        on right: 10 12
    exp <ExprAST*> (23)
        on left: 13 14 15 16 17 18 19
        on right: 7 8 13 14 15 16 18 24 25
    idexp <ExprAST*> (24)
        on left: 20 21
        on right: 17
    optexp <std::vector<ExprAST*>> (25)
        on left: 22 23
        on right: 21
    explist <std::vector<ExprAST*>> (26)
        on left: 24 25
        on right: 23 25


State 0

    0 $accept: . startsymb "end of file"
    1 startsymb: . program
    2 program: . %empty
    3        | . top ";" program
    4 top: . %empty
    5    | . definition
    6    | . external
    7    | . exp
    8 definition: . "def" proto exp
    9 external: . "extern" proto
   13 exp: . exp "+" exp
   14    | . exp "-" exp
   15    | . exp "*" exp
   16    | . exp "/" exp
   17    | . idexp
   18    | . "(" exp ")"
   19    | . "number"
   20 idexp: . "id"
   21      | . "id" "(" optexp ")"

    "("       shift, and go to state 1
    "extern"  shift, and go to state 2
    "def"     shift, and go to state 3
    "id"      shift, and go to state 4
    "number"  shift, and go to state 5

    ";"       reduce using rule 4 (top)
    $default  reduce using rule 2 (program)

    startsymb   go to state 6
    program     go to state 7
    top         go to state 8
    definition  go to state 9
    external    go to state 10
    exp         go to state 11
    idexp       go to state 12


State 1

   13 exp: . exp "+" exp
   14    | . exp "-" exp
   15    | . exp "*" exp
   16    | . exp "/" exp
   17    | . idexp
   18    | . "(" exp ")"
   18    | "(" . exp ")"
   19    | . "number"
   20 idexp: . "id"
   21      | . "id" "(" optexp ")"

    "("       shift, and go to state 1
    "id"      shift, and go to state 4
    "number"  shift, and go to state 5

    exp    go to state 13
    idexp  go to state 12


State 2

    9 external: "extern" . proto
   10 proto: . "id" "(" idseq ")"

    "id"  shift, and go to state 14

    proto  go to state 15


State 3

    8 definition: "def" . proto exp
   10 proto: . "id" "(" idseq ")"

    "id"  shift, and go to state 14

    proto  go to state 16


State 4

   20 idexp: "id" .
   21      | "id" . "(" optexp ")"

    "("  shift, and go to state 17

    $default  reduce using rule 20 (idexp)


State 5

   19 exp: "number" .

    $default  reduce using rule 19 (exp)


State 6

    0 $accept: startsymb . "end of file"

    "end of file"  shift, and go to state 18


State 7

    1 startsymb: program .

    $default  reduce using rule 1 (startsymb)


State 8

    3 program: top . ";" program

    ";"  shift, and go to state 19


State 9

    5 top: definition .

    $default  reduce using rule 5 (top)


State 10

    6 top: external .

    $default  reduce using rule 6 (top)


State 11

    7 top: exp .
   13 exp: exp . "+" exp
   14    | exp . "-" exp
   15    | exp . "*" exp
   16    | exp . "/" exp

    "-"  shift, and go to state 20
    "+"  shift, and go to state 21
    "*"  shift, and go to state 22
    "/"  shift, and go to state 23

    $default  reduce using rule 7 (top)


State 12

   17 exp: idexp .

    $default  reduce using rule 17 (exp)


State 13

   13 exp: exp . "+" exp
   14    | exp . "-" exp
   15    | exp . "*" exp
   16    | exp . "/" exp
   18    | "(" exp . ")"

    "-"  shift, and go to state 20
    "+"  shift, and go to state 21
    "*"  shift, and go to state 22
    "/"  shift, and go to state 23
    ")"  shift, and go to state 24


State 14

   10 proto: "id" . "(" idseq ")"

    "("  shift, and go to state 25


State 15

    9 external: "extern" proto .

    $default  reduce using rule 9 (external)


State 16

    8 definition: "def" proto . exp
   13 exp: . exp "+" exp
   14    | . exp "-" exp
   15    | . exp "*" exp
   16    | . exp "/" exp
   17    | . idexp
   18    | . "(" exp ")"
   19    | . "number"
   20 idexp: . "id"
   21      | . "id" "(" optexp ")"

    "("       shift, and go to state 1
    "id"      shift, and go to state 4
    "number"  shift, and go to state 5

    exp    go to state 26
    idexp  go to state 12


State 17

   13 exp: . exp "+" exp
   14    | . exp "-" exp
   15    | . exp "*" exp
   16    | . exp "/" exp
   17    | . idexp
   18    | . "(" exp ")"
   19    | . "number"
   20 idexp: . "id"
   21      | . "id" "(" optexp ")"
   21      | "id" "(" . optexp ")"
   22 optexp: . %empty
   23       | . explist
   24 explist: . exp
   25        | . exp "," explist

    "("       shift, and go to state 1
    "id"      shift, and go to state 4
    "number"  shift, and go to state 5

    $default  reduce using rule 22 (optexp)

    exp      go to state 27
    idexp    go to state 12
    optexp   go to state 28
    explist  go to state 29


State 18

    0 $accept: startsymb "end of file" .

    $default  accept


State 19

    2 program: . %empty
    3        | . top ";" program
    3        | top ";" . program
    4 top: . %empty
    5    | . definition
    6    | . external
    7    | . exp
    8 definition: . "def" proto exp
    9 external: . "extern" proto
   13 exp: . exp "+" exp
   14    | . exp "-" exp
   15    | . exp "*" exp
   16    | . exp "/" exp
   17    | . idexp
   18    | . "(" exp ")"
   19    | . "number"
   20 idexp: . "id"
   21      | . "id" "(" optexp ")"

    "("       shift, and go to state 1
    "extern"  shift, and go to state 2
    "def"     shift, and go to state 3
    "id"      shift, and go to state 4
    "number"  shift, and go to state 5

    ";"       reduce using rule 4 (top)
    $default  reduce using rule 2 (program)

    program     go to state 30
    top         go to state 8
    definition  go to state 9
    external    go to state 10
    exp         go to state 11
    idexp       go to state 12


State 20

   13 exp: . exp "+" exp
   14    | . exp "-" exp
   14    | exp "-" . exp
   15    | . exp "*" exp
   16    | . exp "/" exp
   17    | . idexp
   18    | . "(" exp ")"
   19    | . "number"
   20 idexp: . "id"
   21      | . "id" "(" optexp ")"

    "("       shift, and go to state 1
    "id"      shift, and go to state 4
    "number"  shift, and go to state 5

    exp    go to state 31
    idexp  go to state 12


State 21

   13 exp: . exp "+" exp
   13    | exp "+" . exp
   14    | . exp "-" exp
   15    | . exp "*" exp
   16    | . exp "/" exp
   17    | . idexp
   18    | . "(" exp ")"
   19    | . "number"
   20 idexp: . "id"
   21      | . "id" "(" optexp ")"

    "("       shift, and go to state 1
    "id"      shift, and go to state 4
    "number"  shift, and go to state 5

    exp    go to state 32
    idexp  go to state 12


State 22

   13 exp: . exp "+" exp
   14    | . exp "-" exp
   15    | . exp "*" exp
   15    | exp "*" . exp
   16    | . exp "/" exp
   17    | . idexp
   18    | . "(" exp ")"
   19    | . "number"
   20 idexp: . "id"
   21      | . "id" "(" optexp ")"

    "("       shift, and go to state 1
    "id"      shift, and go to state 4
    "number"  shift, and go to state 5

    exp    go to state 33
    idexp  go to state 12


State 23

   13 exp: . exp "+" exp
   14    | . exp "-" exp
   15    | . exp "*" exp
   16    | . exp "/" exp
   16    | exp "/" . exp
   17    | . idexp
   18    | . "(" exp ")"
   19    | . "number"
   20 idexp: . "id"
   21      | . "id" "(" optexp ")"

    "("       shift, and go to state 1
    "id"      shift, and go to state 4
    "number"  shift, and go to state 5

    exp    go to state 34
    idexp  go to state 12


State 24

   18 exp: "(" exp ")" .

    $default  reduce using rule 18 (exp)


State 25

   10 proto: "id" "(" . idseq ")"
   11 idseq: . %empty
   12      | . "id" idseq

    "id"  shift, and go to state 35

    $default  reduce using rule 11 (idseq)

    idseq  go to state 36


State 26

    8 definition: "def" proto exp .
   13 exp: exp . "+" exp
   14    | exp . "-" exp
   15    | exp . "*" exp
   16    | exp . "/" exp

    "-"  shift, and go to state 20
    "+"  shift, and go to state 21
    "*"  shift, and go to state 22
    "/"  shift, and go to state 23

    $default  reduce using rule 8 (definition)


State 27

   13 exp: exp . "+" exp
   14    | exp . "-" exp
   15    | exp . "*" exp
   16    | exp . "/" exp
   24 explist: exp .
   25        | exp . "," explist

    ","  shift, and go to state 37
    "-"  shift, and go to state 20
    "+"  shift, and go to state 21
    "*"  shift, and go to state 22
    "/"  shift, and go to state 23

    $default  reduce using rule 24 (explist)


State 28

   21 idexp: "id" "(" optexp . ")"

    ")"  shift, and go to state 38


State 29

   23 optexp: explist .

    $default  reduce using rule 23 (optexp)


State 30

    3 program: top ";" program .

    $default  reduce using rule 3 (program)


State 31

   13 exp: exp . "+" exp
   14    | exp . "-" exp
   14    | exp "-" exp .
   15    | exp . "*" exp
   16    | exp . "/" exp

    "*"  shift, and go to state 22
    "/"  shift, and go to state 23

    $default  reduce using rule 14 (exp)


State 32

   13 exp: exp . "+" exp
   13    | exp "+" exp .
   14    | exp . "-" exp
   15    | exp . "*" exp
   16    | exp . "/" exp

    "*"  shift, and go to state 22
    "/"  shift, and go to state 23

    $default  reduce using rule 13 (exp)


State 33

   13 exp: exp . "+" exp
   14    | exp . "-" exp
   15    | exp . "*" exp
   15    | exp "*" exp .
   16    | exp . "/" exp

    $default  reduce using rule 15 (exp)


State 34

   13 exp: exp . "+" exp
   14    | exp . "-" exp
   15    | exp . "*" exp
   16    | exp . "/" exp
   16    | exp "/" exp .

    $default  reduce using rule 16 (exp)


State 35

   11 idseq: . %empty
   12      | . "id" idseq
   12      | "id" . idseq

    "id"  shift, and go to state 35

    $default  reduce using rule 11 (idseq)

    idseq  go to state 39


State 36

   10 proto: "id" "(" idseq . ")"

    ")"  shift, and go to state 40


State 37

   13 exp: . exp "+" exp
   14    | . exp "-" exp
   15    | . exp "*" exp
   16    | . exp "/" exp
   17    | . idexp
   18    | . "(" exp ")"
   19    | . "number"
   20 idexp: . "id"
   21      | . "id" "(" optexp ")"
   24 explist: . exp
   25        | . exp "," explist
   25        | exp "," . explist

    "("       shift, and go to state 1
    "id"      shift, and go to state 4
    "number"  shift, and go to state 5

    exp      go to state 27
    idexp    go to state 12
    explist  go to state 41


State 38

   21 idexp: "id" "(" optexp ")" .

    $default  reduce using rule 21 (idexp)


State 39

   12 idseq: "id" idseq .

    $default  reduce using rule 12 (idseq)


State 40

   10 proto: "id" "(" idseq ")" .

    $default  reduce using rule 10 (proto)


State 41

   25 explist: exp "," explist .

    $default  reduce using rule 25 (explist)
